# tic_tac_toe_minimax

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  CNAME  Game.cpp  Game.h  MiniMax.cpp  MiniMax.h  Piece.cpp  Piece.h  README.md  Texture.cpp  Texture.h  main.cpp
